--- a/shortsym.sty
+++ b/shortsym.sty
@@ -23,136 +23,6 @@
 % writing equations
 
 
-% Bold italic letters
-\newcommand{\BA}{\bm{A}}
-\newcommand{\BB}{\bm{B}}
-\newcommand{\BC}{\bm{C}}
-\newcommand{\BD}{\bm{D}}
-\newcommand{\BE}{\bm{E}}
-\newcommand{\BF}{\bm{F}}
-\newcommand{\BG}{\bm{G}}
-\newcommand{\BH}{\bm{H}}
-\newcommand{\BI}{\bm{I}}
-\newcommand{\BJ}{\bm{J}}
-\newcommand{\BK}{\bm{K}}
-\newcommand{\BL}{\bm{L}}
-\newcommand{\BM}{\bm{M}}
-\newcommand{\BN}{\bm{N}}
-\newcommand{\BO}{\bm{O}}
-\newcommand{\BP}{\bm{P}}
-\newcommand{\BQ}{\bm{Q}}
-\newcommand{\BR}{\bm{R}}
-\newcommand{\BS}{\bm{S}}
-\newcommand{\BT}{\bm{T}}
-\newcommand{\BU}{\bm{U}}
-\newcommand{\BV}{\bm{V}}
-\newcommand{\BW}{\bm{W}}
-\newcommand{\BX}{\bm{X}}
-\newcommand{\BY}{\bm{Y}}
-\newcommand{\BZ}{\bm{Z}}
-\newcommand{\Ba}{\bm{a}}
-\newcommand{\Bb}{\bm{b}}
-\newcommand{\Bc}{\bm{c}}
-\newcommand{\Bd}{\bm{d}}
-\newcommand{\Be}{\bm{e}}
-\newcommand{\Bf}{\bm{f}}
-\newcommand{\Bg}{\bm{g}}
-\newcommand{\Bh}{\bm{h}}
-\newcommand{\Bi}{\bm{i}}
-\newcommand{\Bj}{\bm{j}}
-\newcommand{\Bk}{\bm{k}}
-\newcommand{\Bl}{\bm{l}}
-\newcommand{\Bm}{\bm{m}}
-\newcommand{\Bn}{\bm{n}}
-\newcommand{\Bo}{\bm{o}}
-\newcommand{\Bp}{\bm{p}}
-\newcommand{\Bq}{\bm{q}}
-\newcommand{\Br}{\bm{r}}
-\newcommand{\Bs}{\bm{s}}
-\newcommand{\Bt}{\bm{t}}
-\newcommand{\Bu}{\bm{u}}
-\newcommand{\Bv}{\bm{v}}
-\newcommand{\Bw}{\bm{w}}
-\newcommand{\Bx}{\bm{x}}
-\newcommand{\By}{\bm{y}}
-\newcommand{\Bz}{\bm{z}}
-
-% bold italic numbers
-\newcommand{\Bzero }{\bm{\mathit{0}}}
-\newcommand{\Bone  }{\bm{\mathit{1}}}
-\newcommand{\Btwo  }{\bm{\mathit{2}}}
-\newcommand{\Bthree}{\bm{\mathit{3}}}
-\newcommand{\Bfour }{\bm{\mathit{4}}}
-\newcommand{\Bfive }{\bm{\mathit{5}}}
-\newcommand{\Bsix  }{\bm{\mathit{6}}}
-\newcommand{\Bseven}{\bm{\mathit{7}}}
-\newcommand{\Beight}{\bm{\mathit{8}}}
-\newcommand{\Bnine }{\bm{\mathit{9}}}
-
-% Roman (upright) Latin
-\newcommand{\Ja}{\mathit{a}}
-\newcommand{\Jb}{\mathit{b}}
-\newcommand{\Jc}{\mathit{c}}
-\newcommand{\Jd}{\mathit{d}}
-\newcommand{\Je}{\mathit{e}}
-\newcommand{\Jf}{\mathit{f}}
-\newcommand{\Jg}{\mathit{g}}
-\newcommand{\Jh}{\mathit{h}}
-\newcommand{\Ji}{\mathit{i}}
-\newcommand{\Jj}{\mathit{j}}
-\newcommand{\Jk}{\mathit{k}}
-\newcommand{\Jl}{\mathit{l}}
-\newcommand{\Jm}{\mathit{m}}
-\newcommand{\Jn}{\mathit{n}}
-\newcommand{\Jo}{\mathit{o}}
-\newcommand{\Jp}{\mathit{p}}
-\newcommand{\Jq}{\mathit{q}}
-\newcommand{\Jr}{\mathit{r}}
-\newcommand{\Js}{\mathit{s}}
-\newcommand{\Jt}{\mathit{t}}
-\newcommand{\Ju}{\mathit{u}}
-\newcommand{\Jv}{\mathit{v}}
-\newcommand{\Jw}{\mathit{w}}
-\newcommand{\Jx}{\mathit{x}}
-\newcommand{\Jy}{\mathit{y}}
-\newcommand{\Jz}{\mathit{z}}
-\newcommand{\JA}{\mathit{A}}
-\newcommand{\JB}{\mathit{B}}
-\newcommand{\JC}{\mathit{C}}
-\newcommand{\JD}{\mathit{D}}
-\newcommand{\JE}{\mathit{E}}
-\newcommand{\JF}{\mathit{F}}
-\newcommand{\JG}{\mathit{G}}
-\newcommand{\JH}{\mathit{H}}
-\newcommand{\JI}{\mathit{I}}
-\newcommand{\JJ}{\mathit{J}}
-\newcommand{\JK}{\mathit{K}}
-\newcommand{\JL}{\mathit{L}}
-\newcommand{\JM}{\mathit{M}}
-\newcommand{\JN}{\mathit{N}}
-\newcommand{\JO}{\mathit{O}}
-\newcommand{\JP}{\mathit{P}}
-\newcommand{\JQ}{\mathit{Q}}
-\newcommand{\JR}{\mathit{R}}
-\newcommand{\JS}{\mathit{S}}
-\newcommand{\JT}{\mathit{T}}
-\newcommand{\JU}{\mathit{U}}
-\newcommand{\JV}{\mathit{V}}
-\newcommand{\JW}{\mathit{W}}
-\newcommand{\JX}{\mathit{X}}
-\newcommand{\JY}{\mathit{Y}}
-\newcommand{\JZ}{\mathit{Z}}
-
-\newcommand{\Jzero }{\mathit{0}}
-\newcommand{\Jone  }{\mathit{1}}
-\newcommand{\Jtwo  }{\mathit{2}}
-\newcommand{\Jthree}{\mathit{3}}
-\newcommand{\Jfour }{\mathit{4}}
-\newcommand{\Jfive }{\mathit{5}}
-\newcommand{\Jsix  }{\mathit{6}}
-\newcommand{\Jseven}{\mathit{7}}
-\newcommand{\Jeight}{\mathit{8}}
-\newcommand{\Jnine }{\mathit{9}}
 % Roman (upright) Latin
 \newcommand{\Ua}{\mathrm{a}}
 \newcommand{\Ub}{\mathrm{b}}
@@ -218,6 +88,70 @@
 \newcommand{\Ueight}{\mathrm{8}}
 \newcommand{\Unine }{\mathrm{9}}
 
+% Roman (upright) Latin
+\newcommand{\Ja}{\mathit{a}}
+\newcommand{\Jb}{\mathit{b}}
+\newcommand{\Jc}{\mathit{c}}
+\newcommand{\Jd}{\mathit{d}}
+\newcommand{\Je}{\mathit{e}}
+\newcommand{\Jf}{\mathit{f}}
+\newcommand{\Jg}{\mathit{g}}
+\newcommand{\Jh}{\mathit{h}}
+\newcommand{\Ji}{\mathit{i}}
+\newcommand{\Jj}{\mathit{j}}
+\newcommand{\Jk}{\mathit{k}}
+\newcommand{\Jl}{\mathit{l}}
+\newcommand{\Jm}{\mathit{m}}
+\newcommand{\Jn}{\mathit{n}}
+\newcommand{\Jo}{\mathit{o}}
+\newcommand{\Jp}{\mathit{p}}
+\newcommand{\Jq}{\mathit{q}}
+\newcommand{\Jr}{\mathit{r}}
+\newcommand{\Js}{\mathit{s}}
+\newcommand{\Jt}{\mathit{t}}
+\newcommand{\Ju}{\mathit{u}}
+\newcommand{\Jv}{\mathit{v}}
+\newcommand{\Jw}{\mathit{w}}
+\newcommand{\Jx}{\mathit{x}}
+\newcommand{\Jy}{\mathit{y}}
+\newcommand{\Jz}{\mathit{z}}
+\newcommand{\JA}{\mathit{A}}
+\newcommand{\JB}{\mathit{B}}
+\newcommand{\JC}{\mathit{C}}
+\newcommand{\JD}{\mathit{D}}
+\newcommand{\JE}{\mathit{E}}
+\newcommand{\JF}{\mathit{F}}
+\newcommand{\JG}{\mathit{G}}
+\newcommand{\JH}{\mathit{H}}
+\newcommand{\JI}{\mathit{I}}
+\newcommand{\JJ}{\mathit{J}}
+\newcommand{\JK}{\mathit{K}}
+\newcommand{\JL}{\mathit{L}}
+\newcommand{\JM}{\mathit{M}}
+\newcommand{\JN}{\mathit{N}}
+\newcommand{\JO}{\mathit{O}}
+\newcommand{\JP}{\mathit{P}}
+\newcommand{\JQ}{\mathit{Q}}
+\newcommand{\JR}{\mathit{R}}
+\newcommand{\JS}{\mathit{S}}
+\newcommand{\JT}{\mathit{T}}
+\newcommand{\JU}{\mathit{U}}
+\newcommand{\JV}{\mathit{V}}
+\newcommand{\JW}{\mathit{W}}
+\newcommand{\JX}{\mathit{X}}
+\newcommand{\JY}{\mathit{Y}}
+\newcommand{\JZ}{\mathit{Z}}
+
+\newcommand{\Jzero }{\mathit{0}}
+\newcommand{\Jone  }{\mathit{1}}
+\newcommand{\Jtwo  }{\mathit{2}}
+\newcommand{\Jthree}{\mathit{3}}
+\newcommand{\Jfour }{\mathit{4}}
+\newcommand{\Jfive }{\mathit{5}}
+\newcommand{\Jsix  }{\mathit{6}}
+\newcommand{\Jseven}{\mathit{7}}
+\newcommand{\Jeight}{\mathit{8}}
+\newcommand{\Jnine }{\mathit{9}}
 % Upright bold letters
 \newcommand{\VA}{\bm{\mathrm{A}}}
 \newcommand{\VB}{\bm{\mathrm{B}}}
@@ -273,16 +207,82 @@
 \newcommand{\Vz}{\bm{\mathrm{z}}}
 
 % bold upright numbers
-\newcommand{\Vzero }{\bm{0}}
-\newcommand{\Vone  }{\bm{1}}
-\newcommand{\Vtwo  }{\bm{2}}
-\newcommand{\Vthree}{\bm{3}}
-\newcommand{\Vfour }{\bm{4}}
-\newcommand{\Vfive }{\bm{5}}
-\newcommand{\Vsix  }{\bm{6}}
-\newcommand{\Vseven}{\bm{7}}
-\newcommand{\Veight}{\bm{8}}
-\newcommand{\Vnine }{\bm{9}}
+\newcommand{\Vzero }{\bm{\mathrm{0}}}
+\newcommand{\Vone  }{\bm{\mathrm{1}}}
+\newcommand{\Vtwo  }{\bm{\mathrm{2}}}
+\newcommand{\Vthree}{\bm{\mathrm{3}}}
+\newcommand{\Vfour }{\bm{\mathrm{4}}}
+\newcommand{\Vfive }{\bm{\mathrm{5}}}
+\newcommand{\Vsix  }{\bm{\mathrm{6}}}
+\newcommand{\Vseven}{\bm{\mathrm{7}}}
+\newcommand{\Veight}{\bm{\mathrm{8}}}
+\newcommand{\Vnine }{\bm{\mathrm{9}}}
+% Bold italic letters
+\newcommand{\BA}{\bm{\mathit{A}}}
+\newcommand{\BB}{\bm{\mathit{B}}}
+\newcommand{\BC}{\bm{\mathit{C}}}
+\newcommand{\BD}{\bm{\mathit{D}}}
+\newcommand{\BE}{\bm{\mathit{E}}}
+\newcommand{\BF}{\bm{\mathit{F}}}
+\newcommand{\BG}{\bm{\mathit{G}}}
+\newcommand{\BH}{\bm{\mathit{H}}}
+\newcommand{\BI}{\bm{\mathit{I}}}
+\newcommand{\BJ}{\bm{\mathit{J}}}
+\newcommand{\BK}{\bm{\mathit{K}}}
+\newcommand{\BL}{\bm{\mathit{L}}}
+\newcommand{\BM}{\bm{\mathit{M}}}
+\newcommand{\BN}{\bm{\mathit{N}}}
+\newcommand{\BO}{\bm{\mathit{O}}}
+\newcommand{\BP}{\bm{\mathit{P}}}
+\newcommand{\BQ}{\bm{\mathit{Q}}}
+\newcommand{\BR}{\bm{\mathit{R}}}
+\newcommand{\BS}{\bm{\mathit{S}}}
+\newcommand{\BT}{\bm{\mathit{T}}}
+\newcommand{\BU}{\bm{\mathit{U}}}
+\newcommand{\BV}{\bm{\mathit{V}}}
+\newcommand{\BW}{\bm{\mathit{W}}}
+\newcommand{\BX}{\bm{\mathit{X}}}
+\newcommand{\BY}{\bm{\mathit{Y}}}
+\newcommand{\BZ}{\bm{\mathit{Z}}}
+\newcommand{\Ba}{\bm{\mathit{a}}}
+\newcommand{\Bb}{\bm{\mathit{b}}}
+\newcommand{\Bc}{\bm{\mathit{c}}}
+\newcommand{\Bd}{\bm{\mathit{d}}}
+\newcommand{\Be}{\bm{\mathit{e}}}
+\newcommand{\Bf}{\bm{\mathit{f}}}
+\newcommand{\Bg}{\bm{\mathit{g}}}
+\newcommand{\Bh}{\bm{\mathit{h}}}
+\newcommand{\Bi}{\bm{\mathit{i}}}
+\newcommand{\Bj}{\bm{\mathit{j}}}
+\newcommand{\Bk}{\bm{\mathit{k}}}
+\newcommand{\Bl}{\bm{\mathit{l}}}
+\newcommand{\Bm}{\bm{\mathit{m}}}
+\newcommand{\Bn}{\bm{\mathit{n}}}
+\newcommand{\Bo}{\bm{\mathit{o}}}
+\newcommand{\Bp}{\bm{\mathit{p}}}
+\newcommand{\Bq}{\bm{\mathit{q}}}
+\newcommand{\Br}{\bm{\mathit{r}}}
+\newcommand{\Bs}{\bm{\mathit{s}}}
+\newcommand{\Bt}{\bm{\mathit{t}}}
+\newcommand{\Bu}{\bm{\mathit{u}}}
+\newcommand{\Bv}{\bm{\mathit{v}}}
+\newcommand{\Bw}{\bm{\mathit{w}}}
+\newcommand{\Bx}{\bm{\mathit{x}}}
+\newcommand{\By}{\bm{\mathit{y}}}
+\newcommand{\Bz}{\bm{\mathit{z}}}
+
+% bold italic numbers
+\newcommand{\Bzero }{\bm{\mathit{0}}}
+\newcommand{\Bone  }{\bm{\mathit{1}}}
+\newcommand{\Btwo  }{\bm{\mathit{2}}}
+\newcommand{\Bthree}{\bm{\mathit{3}}}
+\newcommand{\Bfour }{\bm{\mathit{4}}}
+\newcommand{\Bfive }{\bm{\mathit{5}}}
+\newcommand{\Bsix  }{\bm{\mathit{6}}}
+\newcommand{\Bseven}{\bm{\mathit{7}}}
+\newcommand{\Beight}{\bm{\mathit{8}}}
+\newcommand{\Bnine }{\bm{\mathit{9}}}
+
 % AMS blackboard bold
 \newcommand{\IA}{\mathbb{A}}
 \newcommand{\IB}{\mathbb{B}}
