--- a/shortsym.tex
+++ b/shortsym.tex
@@ -65,7 +65,7 @@ for alphabets in which this is possible.
     Upright letters & \texttt{amsmath} & \verb+\U+ & \verb+\mathrm{*}+ & $\UA\UB\UC\Ud\Ue\Uf\Uone\Utwo\Uthree$\\
     Italic letters & \texttt{amsmath} & \verb+\S+ & \verb+\mathit{*}+ & $\JA\JB\JC\Jd\Je\Jf\Jone\Jtwo\Jthree$ \\
     Bold letters & \texttt{amsmath} & \verb+\V+ & \verb+\bm{\mathrm{*}}+ & $\VA\VB\VC\Vd\Ve\Vf\Vone\Vtwo\Vthree$ \\
-    Bold italic letters & \texttt{amsmath} & \verb+\B+ & \verb+\bm{*}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
+    Bold italic letters & \texttt{amsmath} & \verb+\B+ & \verb+\bm{\mathit{*}}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
     Sans serif & \texttt{amsmath} & \verb+\F+ & \verb+\mathsf{*}+ & $\FA\FB\FC\Fd\Fe\Ff\Fone\Ftwo\Fthree$\\
     Bold sans serif & \texttt{amsmath} & \verb+\BF+ & \verb+\bm{\mathsf{*}}+ & $\BFA\BFB\BFC\BFd\BFe\BFf\BFone\BFtwo\BFthree$\\
     AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ & $\IA\IB\IC$ \\
