--- a/shortsym_bold.sty
+++ b/shortsym_bold.sty
@@ -1,66 +1,65 @@
-% Bold italic letters
-\newcommand{\BA}{\bm{A}}
-\newcommand{\BB}{\bm{B}}
-\newcommand{\BC}{\bm{C}}
-\newcommand{\BD}{\bm{D}}
-\newcommand{\BE}{\bm{E}}
-\newcommand{\BF}{\bm{F}}
-\newcommand{\BG}{\bm{G}}
-\newcommand{\BH}{\bm{H}}
-\newcommand{\BI}{\bm{I}}
-\newcommand{\BJ}{\bm{J}}
-\newcommand{\BK}{\bm{K}}
-\newcommand{\BL}{\bm{L}}
-\newcommand{\BM}{\bm{M}}
-\newcommand{\BN}{\bm{N}}
-\newcommand{\BO}{\bm{O}}
-\newcommand{\BP}{\bm{P}}
-\newcommand{\BQ}{\bm{Q}}
-\newcommand{\BR}{\bm{R}}
-\newcommand{\BS}{\bm{S}}
-\newcommand{\BT}{\bm{T}}
-\newcommand{\BU}{\bm{U}}
-\newcommand{\BV}{\bm{V}}
-\newcommand{\BW}{\bm{W}}
-\newcommand{\BX}{\bm{X}}
-\newcommand{\BY}{\bm{Y}}
-\newcommand{\BZ}{\bm{Z}}
-\newcommand{\Ba}{\bm{a}}
-\newcommand{\Bb}{\bm{b}}
-\newcommand{\Bc}{\bm{c}}
-\newcommand{\Bd}{\bm{d}}
-\newcommand{\Be}{\bm{e}}
-\newcommand{\Bf}{\bm{f}}
-\newcommand{\Bg}{\bm{g}}
-\newcommand{\Bh}{\bm{h}}
-\newcommand{\Bi}{\bm{i}}
-\newcommand{\Bj}{\bm{j}}
-\newcommand{\Bk}{\bm{k}}
-\newcommand{\Bl}{\bm{l}}
-\newcommand{\Bm}{\bm{m}}
-\newcommand{\Bn}{\bm{n}}
-\newcommand{\Bo}{\bm{o}}
-\newcommand{\Bp}{\bm{p}}
-\newcommand{\Bq}{\bm{q}}
-\newcommand{\Br}{\bm{r}}
-\newcommand{\Bs}{\bm{s}}
-\newcommand{\Bt}{\bm{t}}
-\newcommand{\Bu}{\bm{u}}
-\newcommand{\Bv}{\bm{v}}
-\newcommand{\Bw}{\bm{w}}
-\newcommand{\Bx}{\bm{x}}
-\newcommand{\By}{\bm{y}}
-\newcommand{\Bz}{\bm{z}}
+% Upright bold letters
+\newcommand{\VA}{\bm{\mathrm{A}}}
+\newcommand{\VB}{\bm{\mathrm{B}}}
+\newcommand{\VC}{\bm{\mathrm{C}}}
+\newcommand{\VD}{\bm{\mathrm{D}}}
+\newcommand{\VE}{\bm{\mathrm{E}}}
+\newcommand{\VF}{\bm{\mathrm{F}}}
+\newcommand{\VG}{\bm{\mathrm{G}}}
+\newcommand{\VH}{\bm{\mathrm{H}}}
+\newcommand{\VI}{\bm{\mathrm{I}}}
+\newcommand{\VJ}{\bm{\mathrm{J}}}
+\newcommand{\VK}{\bm{\mathrm{K}}}
+\newcommand{\VL}{\bm{\mathrm{L}}}
+\newcommand{\VM}{\bm{\mathrm{M}}}
+\newcommand{\VN}{\bm{\mathrm{N}}}
+\newcommand{\VO}{\bm{\mathrm{O}}}
+\newcommand{\VP}{\bm{\mathrm{P}}}
+\newcommand{\VQ}{\bm{\mathrm{Q}}}
+\newcommand{\VR}{\bm{\mathrm{R}}}
+\newcommand{\VS}{\bm{\mathrm{S}}}
+\newcommand{\VT}{\bm{\mathrm{T}}}
+\newcommand{\VU}{\bm{\mathrm{U}}}
+\newcommand{\VV}{\bm{\mathrm{V}}}
+\newcommand{\VW}{\bm{\mathrm{W}}}
+\newcommand{\VX}{\bm{\mathrm{X}}}
+\newcommand{\VY}{\bm{\mathrm{Y}}}
+\newcommand{\VZ}{\bm{\mathrm{Z}}}
+\newcommand{\Va}{\bm{\mathrm{a}}}
+\newcommand{\Vb}{\bm{\mathrm{b}}}
+\newcommand{\Vc}{\bm{\mathrm{c}}}
+\newcommand{\Vd}{\bm{\mathrm{d}}}
+\newcommand{\Ve}{\bm{\mathrm{e}}}
+\newcommand{\Vf}{\bm{\mathrm{f}}}
+\newcommand{\Vg}{\bm{\mathrm{g}}}
+\newcommand{\Vh}{\bm{\mathrm{h}}}
+\newcommand{\Vi}{\bm{\mathrm{i}}}
+\newcommand{\Vj}{\bm{\mathrm{j}}}
+\newcommand{\Vk}{\bm{\mathrm{k}}}
+\newcommand{\Vl}{\bm{\mathrm{l}}}
+\newcommand{\Vm}{\bm{\mathrm{m}}}
+\newcommand{\Vn}{\bm{\mathrm{n}}}
+\newcommand{\Vo}{\bm{\mathrm{o}}}
+\newcommand{\Vp}{\bm{\mathrm{p}}}
+\newcommand{\Vq}{\bm{\mathrm{q}}}
+\newcommand{\Vr}{\bm{\mathrm{r}}}
+\newcommand{\Vs}{\bm{\mathrm{s}}}
+\newcommand{\Vt}{\bm{\mathrm{t}}}
+\newcommand{\Vu}{\bm{\mathrm{u}}}
+\newcommand{\Vv}{\bm{\mathrm{v}}}
+\newcommand{\Vw}{\bm{\mathrm{w}}}
+\newcommand{\Vx}{\bm{\mathrm{x}}}
+\newcommand{\Vy}{\bm{\mathrm{y}}}
+\newcommand{\Vz}{\bm{\mathrm{z}}}
 
-% bold italic numbers
-\newcommand{\Bzero }{\bm{\mathit{0}}}
-\newcommand{\Bone  }{\bm{\mathit{1}}}
-\newcommand{\Btwo  }{\bm{\mathit{2}}}
-\newcommand{\Bthree}{\bm{\mathit{3}}}
-\newcommand{\Bfour }{\bm{\mathit{4}}}
-\newcommand{\Bfive }{\bm{\mathit{5}}}
-\newcommand{\Bsix  }{\bm{\mathit{6}}}
-\newcommand{\Bseven}{\bm{\mathit{7}}}
-\newcommand{\Beight}{\bm{\mathit{8}}}
-\newcommand{\Bnine }{\bm{\mathit{9}}}
-
+% bold upright numbers
+\newcommand{\Vzero }{\bm{\mathrm{0}}}
+\newcommand{\Vone  }{\bm{\mathrm{1}}}
+\newcommand{\Vtwo  }{\bm{\mathrm{2}}}
+\newcommand{\Vthree}{\bm{\mathrm{3}}}
+\newcommand{\Vfour }{\bm{\mathrm{4}}}
+\newcommand{\Vfive }{\bm{\mathrm{5}}}
+\newcommand{\Vsix  }{\bm{\mathrm{6}}}
+\newcommand{\Vseven}{\bm{\mathrm{7}}}
+\newcommand{\Veight}{\bm{\mathrm{8}}}
+\newcommand{\Vnine }{\bm{\mathrm{9}}}
