--- a/shortsym.sty
+++ b/shortsym.sty
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{bbm}
+\usepackage{bbold}
 \usepackage{bm}
 
 % \usepackage{unicode-math}
@@ -153,6 +154,71 @@
 \newcommand{\Jeight}{\mathit{8}}
 \newcommand{\Jnine }{\mathit{9}}
 % Upright bold letters
+\newcommand{\BA}{\bm{\mathrm{A}}}
+\newcommand{\BB}{\bm{\mathrm{B}}}
+\newcommand{\BC}{\bm{\mathrm{C}}}
+\newcommand{\BD}{\bm{\mathrm{D}}}
+\newcommand{\BE}{\bm{\mathrm{E}}}
+\newcommand{\BF}{\bm{\mathrm{F}}}
+\newcommand{\BG}{\bm{\mathrm{G}}}
+\newcommand{\BH}{\bm{\mathrm{H}}}
+\newcommand{\BI}{\bm{\mathrm{I}}}
+\newcommand{\BJ}{\bm{\mathrm{J}}}
+\newcommand{\BK}{\bm{\mathrm{K}}}
+\newcommand{\BL}{\bm{\mathrm{L}}}
+\newcommand{\BM}{\bm{\mathrm{M}}}
+\newcommand{\BN}{\bm{\mathrm{N}}}
+\newcommand{\BO}{\bm{\mathrm{O}}}
+\newcommand{\BP}{\bm{\mathrm{P}}}
+\newcommand{\BQ}{\bm{\mathrm{Q}}}
+\newcommand{\BR}{\bm{\mathrm{R}}}
+\newcommand{\BS}{\bm{\mathrm{S}}}
+\newcommand{\BT}{\bm{\mathrm{T}}}
+\newcommand{\BU}{\bm{\mathrm{U}}}
+\newcommand{\BV}{\bm{\mathrm{V}}}
+\newcommand{\BW}{\bm{\mathrm{W}}}
+\newcommand{\BX}{\bm{\mathrm{X}}}
+\newcommand{\BY}{\bm{\mathrm{Y}}}
+\newcommand{\BZ}{\bm{\mathrm{Z}}}
+\newcommand{\Ba}{\bm{\mathrm{a}}}
+\newcommand{\Bb}{\bm{\mathrm{b}}}
+\newcommand{\Bc}{\bm{\mathrm{c}}}
+\newcommand{\Bd}{\bm{\mathrm{d}}}
+\newcommand{\Be}{\bm{\mathrm{e}}}
+\newcommand{\Bf}{\bm{\mathrm{f}}}
+\newcommand{\Bg}{\bm{\mathrm{g}}}
+\newcommand{\Bh}{\bm{\mathrm{h}}}
+\newcommand{\Bi}{\bm{\mathrm{i}}}
+\newcommand{\Bj}{\bm{\mathrm{j}}}
+\newcommand{\Bk}{\bm{\mathrm{k}}}
+\newcommand{\Bl}{\bm{\mathrm{l}}}
+\newcommand{\Bm}{\bm{\mathrm{m}}}
+\newcommand{\Bn}{\bm{\mathrm{n}}}
+\newcommand{\Bo}{\bm{\mathrm{o}}}
+\newcommand{\Bp}{\bm{\mathrm{p}}}
+\newcommand{\Bq}{\bm{\mathrm{q}}}
+\newcommand{\Br}{\bm{\mathrm{r}}}
+\newcommand{\Bs}{\bm{\mathrm{s}}}
+\newcommand{\Bt}{\bm{\mathrm{t}}}
+\newcommand{\Bu}{\bm{\mathrm{u}}}
+\newcommand{\Bv}{\bm{\mathrm{v}}}
+\newcommand{\Bw}{\bm{\mathrm{w}}}
+\newcommand{\Bx}{\bm{\mathrm{x}}}
+\newcommand{\By}{\bm{\mathrm{y}}}
+\newcommand{\Bz}{\bm{\mathrm{z}}}
+
+% bold upright numbers
+\newcommand{\Bzero }{\bm{\mathrm{0}}}
+\newcommand{\Bone  }{\bm{\mathrm{1}}}
+\newcommand{\Btwo  }{\bm{\mathrm{2}}}
+\newcommand{\Bthree}{\bm{\mathrm{3}}}
+\newcommand{\Bfour }{\bm{\mathrm{4}}}
+\newcommand{\Bfive }{\bm{\mathrm{5}}}
+\newcommand{\Bsix  }{\bm{\mathrm{6}}}
+\newcommand{\Bseven}{\bm{\mathrm{7}}}
+\newcommand{\Beight}{\bm{\mathrm{8}}}
+\newcommand{\Bnine }{\bm{\mathrm{9}}}
+% Upright bold letters
 \newcommand{\VA}{\bm{\mathrm{A}}}
 \newcommand{\VB}{\bm{\mathrm{B}}}
 \newcommand{\VC}{\bm{\mathrm{C}}}
@@ -217,72 +283,6 @@
 \newcommand{\Vseven}{\bm{\mathrm{7}}}
 \newcommand{\Veight}{\bm{\mathrm{8}}}
 \newcommand{\Vnine }{\bm{\mathrm{9}}}
-% Bold italic letters
-\newcommand{\BA}{\bm{\mathit{A}}}
-\newcommand{\BB}{\bm{\mathit{B}}}
-\newcommand{\BC}{\bm{\mathit{C}}}
-\newcommand{\BD}{\bm{\mathit{D}}}
-\newcommand{\BE}{\bm{\mathit{E}}}
-\newcommand{\BF}{\bm{\mathit{F}}}
-\newcommand{\BG}{\bm{\mathit{G}}}
-\newcommand{\BH}{\bm{\mathit{H}}}
-\newcommand{\BI}{\bm{\mathit{I}}}
-\newcommand{\BJ}{\bm{\mathit{J}}}
-\newcommand{\BK}{\bm{\mathit{K}}}
-\newcommand{\BL}{\bm{\mathit{L}}}
-\newcommand{\BM}{\bm{\mathit{M}}}
-\newcommand{\BN}{\bm{\mathit{N}}}
-\newcommand{\BO}{\bm{\mathit{O}}}
-\newcommand{\BP}{\bm{\mathit{P}}}
-\newcommand{\BQ}{\bm{\mathit{Q}}}
-\newcommand{\BR}{\bm{\mathit{R}}}
-\newcommand{\BS}{\bm{\mathit{S}}}
-\newcommand{\BT}{\bm{\mathit{T}}}
-\newcommand{\BU}{\bm{\mathit{U}}}
-\newcommand{\BV}{\bm{\mathit{V}}}
-\newcommand{\BW}{\bm{\mathit{W}}}
-\newcommand{\BX}{\bm{\mathit{X}}}
-\newcommand{\BY}{\bm{\mathit{Y}}}
-\newcommand{\BZ}{\bm{\mathit{Z}}}
-\newcommand{\Ba}{\bm{\mathit{a}}}
-\newcommand{\Bb}{\bm{\mathit{b}}}
-\newcommand{\Bc}{\bm{\mathit{c}}}
-\newcommand{\Bd}{\bm{\mathit{d}}}
-\newcommand{\Be}{\bm{\mathit{e}}}
-\newcommand{\Bf}{\bm{\mathit{f}}}
-\newcommand{\Bg}{\bm{\mathit{g}}}
-\newcommand{\Bh}{\bm{\mathit{h}}}
-\newcommand{\Bi}{\bm{\mathit{i}}}
-\newcommand{\Bj}{\bm{\mathit{j}}}
-\newcommand{\Bk}{\bm{\mathit{k}}}
-\newcommand{\Bl}{\bm{\mathit{l}}}
-\newcommand{\Bm}{\bm{\mathit{m}}}
-\newcommand{\Bn}{\bm{\mathit{n}}}
-\newcommand{\Bo}{\bm{\mathit{o}}}
-\newcommand{\Bp}{\bm{\mathit{p}}}
-\newcommand{\Bq}{\bm{\mathit{q}}}
-\newcommand{\Br}{\bm{\mathit{r}}}
-\newcommand{\Bs}{\bm{\mathit{s}}}
-\newcommand{\Bt}{\bm{\mathit{t}}}
-\newcommand{\Bu}{\bm{\mathit{u}}}
-\newcommand{\Bv}{\bm{\mathit{v}}}
-\newcommand{\Bw}{\bm{\mathit{w}}}
-\newcommand{\Bx}{\bm{\mathit{x}}}
-\newcommand{\By}{\bm{\mathit{y}}}
-\newcommand{\Bz}{\bm{\mathit{z}}}
-
-% bold italic numbers
-\newcommand{\Bzero }{\bm{\mathit{0}}}
-\newcommand{\Bone  }{\bm{\mathit{1}}}
-\newcommand{\Btwo  }{\bm{\mathit{2}}}
-\newcommand{\Bthree}{\bm{\mathit{3}}}
-\newcommand{\Bfour }{\bm{\mathit{4}}}
-\newcommand{\Bfive }{\bm{\mathit{5}}}
-\newcommand{\Bsix  }{\bm{\mathit{6}}}
-\newcommand{\Bseven}{\bm{\mathit{7}}}
-\newcommand{\Beight}{\bm{\mathit{8}}}
-\newcommand{\Bnine }{\bm{\mathit{9}}}
-
 % AMS blackboard bold
 \newcommand{\IA}{\mathbb{A}}
 \newcommand{\IB}{\mathbb{B}}
@@ -310,6 +310,19 @@
 \newcommand{\IX}{\mathbb{X}}
 \newcommand{\IY}{\mathbb{Y}}
 \newcommand{\IZ}{\mathbb{Z}}
+
+% bold upright numbers
+\newcommand{\Izero }{{\mathbb{0}}}
+\newcommand{\Ione  }{{\mathbb{1}}}
+\newcommand{\Itwo  }{{\mathbb{2}}}
+\newcommand{\Ithree}{{\mathbb{3}}}
+\newcommand{\Ifour }{{\mathbb{4}}}
+\newcommand{\Ifive }{{\mathbb{5}}}
+\newcommand{\Isix  }{{\mathbb{6}}}
+\newcommand{\Iseven}{{\mathbb{7}}}
+\newcommand{\Ieight}{{\mathbb{8}}}
+\newcommand{\Inine }{{\mathbb{9}}}
+
 % Sans-serif
 \newcommand{\FA}{\mathsf{A}}
 \newcommand{\FB}{\mathsf{B}}
