--- a/shortsym.tex
+++ b/shortsym.tex
@@ -68,10 +68,10 @@ for alphabets in which this is possible.
     Bold italic letters & \texttt{amsmath} & \verb+\B+ & \verb+\bm{\mathit{*}}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
     Sans serif & \texttt{amsmath} & \verb+\F+ & \verb+\mathsf{*}+ & $\FA\FB\FC\Fd\Fe\Ff\Fone\Ftwo\Fthree$\\
     Bold sans serif & \texttt{amsmath} & \verb+\BF+ & \verb+\bm{\mathsf{*}}+ & $\BFA\BFB\BFC\BFd\BFe\BFf\BFone\BFtwo\BFthree$\\
-    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ & $\IA\IB\IC$ \\
+    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ & $\IA\IB\IC\Ione\Itwo\Ithree$ \\
     % \texttt{bbold} blackboard bold & \texttt{bbold},\texttt{mathbbol} & % \verb+\II+ \verb++ & $\IIA\IIB\IIC\IId\IIe\IIf\IIone\IItwo\IIthree$ \\
-    \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & \verb+\mathbbm{*}+ & $\bBA\bBB\bBC\bBd\bBe\bBf\bBone\bBtwo\bBthree$\\
-    \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & \verb+\mathbbmss{*}+ & $\BBA\BBB\BBC\BBd\BBe\BBf\BBone\BBtwo\BBthree$ \\
+    \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & \verb+\mathbbm{*}+ & $\bBA\bBB\bBC\bBd\bBe\bBf$\\
+    \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & \verb+\mathbbmss{*}+ & $\BBA\BBB\BBC\BBd\BBe\BBf$ \\
     % \texttt{bbm} blackboard bold sans italic & \texttt{bbm} & \verb+\IB+ & \verb++ & $\IBA\IBB\IBC\IBd\IBe\IBf$\\
     % \texttt{bbm} blackboard bold serif italic & \texttt{bbm} & \verb+\iB+ & \verb++ & $\iBA\iBB\iBC\iBd\iBe\iBf$\\
     % \texttt{euscript} cursive* & \texttt{euscript} & \verb+\eul+ \verb++ & $\eulA\eulB\eulC$\\
@@ -88,6 +88,8 @@ for alphabets in which this is possible.
     The shorthands marked with * are for uppercase letters only.}
   \label{tb:math}
 \end{table}
+
+
 
 \begin{table}[htbp]
   \centering
@@ -106,5 +108,6 @@ for alphabets in which this is possible.
 \caption{Guide for symbol prefixes for greek letters.}
 \label{tb:greek1}
 \end{table}
+
 
 \end{document}
