--- a/shortsym_amsbb.sty
+++ b/shortsym_amsbb.sty
@@ -25,3 +25,16 @@
 \newcommand{\IX}{\mathbb{X}}
 \newcommand{\IY}{\mathbb{Y}}
 \newcommand{\IZ}{\mathbb{Z}}
+
+% bold upright numbers
+\newcommand{\Izero }{{\mathbb{0}}}
+\newcommand{\Ione  }{{\mathbb{1}}}
+\newcommand{\Itwo  }{{\mathbb{2}}}
+\newcommand{\Ithree}{{\mathbb{3}}}
+\newcommand{\Ifour }{{\mathbb{4}}}
+\newcommand{\Ifive }{{\mathbb{5}}}
+\newcommand{\Isix  }{{\mathbb{6}}}
+\newcommand{\Iseven}{{\mathbb{7}}}
+\newcommand{\Ieight}{{\mathbb{8}}}
+\newcommand{\Inine }{{\mathbb{9}}}
+
