--- a/shortsym_bold.sty
+++ b/shortsym_bold.sty
@@ -1,65 +1,65 @@
 % Upright bold letters
-\newcommand{\VA}{\bm{\mathrm{A}}}
-\newcommand{\VB}{\bm{\mathrm{B}}}
-\newcommand{\VC}{\bm{\mathrm{C}}}
-\newcommand{\VD}{\bm{\mathrm{D}}}
-\newcommand{\VE}{\bm{\mathrm{E}}}
-\newcommand{\VF}{\bm{\mathrm{F}}}
-\newcommand{\VG}{\bm{\mathrm{G}}}
-\newcommand{\VH}{\bm{\mathrm{H}}}
-\newcommand{\VI}{\bm{\mathrm{I}}}
-\newcommand{\VJ}{\bm{\mathrm{J}}}
-\newcommand{\VK}{\bm{\mathrm{K}}}
-\newcommand{\VL}{\bm{\mathrm{L}}}
-\newcommand{\VM}{\bm{\mathrm{M}}}
-\newcommand{\VN}{\bm{\mathrm{N}}}
-\newcommand{\VO}{\bm{\mathrm{O}}}
-\newcommand{\VP}{\bm{\mathrm{P}}}
-\newcommand{\VQ}{\bm{\mathrm{Q}}}
-\newcommand{\VR}{\bm{\mathrm{R}}}
-\newcommand{\VS}{\bm{\mathrm{S}}}
-\newcommand{\VT}{\bm{\mathrm{T}}}
-\newcommand{\VU}{\bm{\mathrm{U}}}
-\newcommand{\VV}{\bm{\mathrm{V}}}
-\newcommand{\VW}{\bm{\mathrm{W}}}
-\newcommand{\VX}{\bm{\mathrm{X}}}
-\newcommand{\VY}{\bm{\mathrm{Y}}}
-\newcommand{\VZ}{\bm{\mathrm{Z}}}
-\newcommand{\Va}{\bm{\mathrm{a}}}
-\newcommand{\Vb}{\bm{\mathrm{b}}}
-\newcommand{\Vc}{\bm{\mathrm{c}}}
-\newcommand{\Vd}{\bm{\mathrm{d}}}
-\newcommand{\Ve}{\bm{\mathrm{e}}}
-\newcommand{\Vf}{\bm{\mathrm{f}}}
-\newcommand{\Vg}{\bm{\mathrm{g}}}
-\newcommand{\Vh}{\bm{\mathrm{h}}}
-\newcommand{\Vi}{\bm{\mathrm{i}}}
-\newcommand{\Vj}{\bm{\mathrm{j}}}
-\newcommand{\Vk}{\bm{\mathrm{k}}}
-\newcommand{\Vl}{\bm{\mathrm{l}}}
-\newcommand{\Vm}{\bm{\mathrm{m}}}
-\newcommand{\Vn}{\bm{\mathrm{n}}}
-\newcommand{\Vo}{\bm{\mathrm{o}}}
-\newcommand{\Vp}{\bm{\mathrm{p}}}
-\newcommand{\Vq}{\bm{\mathrm{q}}}
-\newcommand{\Vr}{\bm{\mathrm{r}}}
-\newcommand{\Vs}{\bm{\mathrm{s}}}
-\newcommand{\Vt}{\bm{\mathrm{t}}}
-\newcommand{\Vu}{\bm{\mathrm{u}}}
-\newcommand{\Vv}{\bm{\mathrm{v}}}
-\newcommand{\Vw}{\bm{\mathrm{w}}}
-\newcommand{\Vx}{\bm{\mathrm{x}}}
-\newcommand{\Vy}{\bm{\mathrm{y}}}
-\newcommand{\Vz}{\bm{\mathrm{z}}}
+\newcommand{\BA}{\bm{\mathrm{A}}}
+\newcommand{\BB}{\bm{\mathrm{B}}}
+\newcommand{\BC}{\bm{\mathrm{C}}}
+\newcommand{\BD}{\bm{\mathrm{D}}}
+\newcommand{\BE}{\bm{\mathrm{E}}}
+\newcommand{\BF}{\bm{\mathrm{F}}}
+\newcommand{\BG}{\bm{\mathrm{G}}}
+\newcommand{\BH}{\bm{\mathrm{H}}}
+\newcommand{\BI}{\bm{\mathrm{I}}}
+\newcommand{\BJ}{\bm{\mathrm{J}}}
+\newcommand{\BK}{\bm{\mathrm{K}}}
+\newcommand{\BL}{\bm{\mathrm{L}}}
+\newcommand{\BM}{\bm{\mathrm{M}}}
+\newcommand{\BN}{\bm{\mathrm{N}}}
+\newcommand{\BO}{\bm{\mathrm{O}}}
+\newcommand{\BP}{\bm{\mathrm{P}}}
+\newcommand{\BQ}{\bm{\mathrm{Q}}}
+\newcommand{\BR}{\bm{\mathrm{R}}}
+\newcommand{\BS}{\bm{\mathrm{S}}}
+\newcommand{\BT}{\bm{\mathrm{T}}}
+\newcommand{\BU}{\bm{\mathrm{U}}}
+\newcommand{\BV}{\bm{\mathrm{V}}}
+\newcommand{\BW}{\bm{\mathrm{W}}}
+\newcommand{\BX}{\bm{\mathrm{X}}}
+\newcommand{\BY}{\bm{\mathrm{Y}}}
+\newcommand{\BZ}{\bm{\mathrm{Z}}}
+\newcommand{\Ba}{\bm{\mathrm{a}}}
+\newcommand{\Bb}{\bm{\mathrm{b}}}
+\newcommand{\Bc}{\bm{\mathrm{c}}}
+\newcommand{\Bd}{\bm{\mathrm{d}}}
+\newcommand{\Be}{\bm{\mathrm{e}}}
+\newcommand{\Bf}{\bm{\mathrm{f}}}
+\newcommand{\Bg}{\bm{\mathrm{g}}}
+\newcommand{\Bh}{\bm{\mathrm{h}}}
+\newcommand{\Bi}{\bm{\mathrm{i}}}
+\newcommand{\Bj}{\bm{\mathrm{j}}}
+\newcommand{\Bk}{\bm{\mathrm{k}}}
+\newcommand{\Bl}{\bm{\mathrm{l}}}
+\newcommand{\Bm}{\bm{\mathrm{m}}}
+\newcommand{\Bn}{\bm{\mathrm{n}}}
+\newcommand{\Bo}{\bm{\mathrm{o}}}
+\newcommand{\Bp}{\bm{\mathrm{p}}}
+\newcommand{\Bq}{\bm{\mathrm{q}}}
+\newcommand{\Br}{\bm{\mathrm{r}}}
+\newcommand{\Bs}{\bm{\mathrm{s}}}
+\newcommand{\Bt}{\bm{\mathrm{t}}}
+\newcommand{\Bu}{\bm{\mathrm{u}}}
+\newcommand{\Bv}{\bm{\mathrm{v}}}
+\newcommand{\Bw}{\bm{\mathrm{w}}}
+\newcommand{\Bx}{\bm{\mathrm{x}}}
+\newcommand{\By}{\bm{\mathrm{y}}}
+\newcommand{\Bz}{\bm{\mathrm{z}}}
 
 % bold upright numbers
-\newcommand{\Vzero }{\bm{\mathrm{0}}}
-\newcommand{\Vone  }{\bm{\mathrm{1}}}
-\newcommand{\Vtwo  }{\bm{\mathrm{2}}}
-\newcommand{\Vthree}{\bm{\mathrm{3}}}
-\newcommand{\Vfour }{\bm{\mathrm{4}}}
-\newcommand{\Vfive }{\bm{\mathrm{5}}}
-\newcommand{\Vsix  }{\bm{\mathrm{6}}}
-\newcommand{\Vseven}{\bm{\mathrm{7}}}
-\newcommand{\Veight}{\bm{\mathrm{8}}}
-\newcommand{\Vnine }{\bm{\mathrm{9}}}
+\newcommand{\Bzero }{\bm{\mathrm{0}}}
+\newcommand{\Bone  }{\bm{\mathrm{1}}}
+\newcommand{\Btwo  }{\bm{\mathrm{2}}}
+\newcommand{\Bthree}{\bm{\mathrm{3}}}
+\newcommand{\Bfour }{\bm{\mathrm{4}}}
+\newcommand{\Bfive }{\bm{\mathrm{5}}}
+\newcommand{\Bsix  }{\bm{\mathrm{6}}}
+\newcommand{\Bseven}{\bm{\mathrm{7}}}
+\newcommand{\Beight}{\bm{\mathrm{8}}}
+\newcommand{\Bnine }{\bm{\mathrm{9}}}
