--- a/shortsym.tex
+++ b/shortsym.tex
@@ -68,7 +68,8 @@ for alphabets in which this is possible.
     Bold italic letters & \texttt{amsmath} & \verb+\B+ & \verb+\bm{\mathit{*}}+ & $\BA\BB\BC\Bd\Be\Bf\Bone\Btwo\Bthree$ \\
     Sans serif & \texttt{amsmath} & \verb+\F+ & \verb+\mathsf{*}+ & $\FA\FB\FC\Fd\Fe\Ff\Fone\Ftwo\Fthree$\\
     Bold sans serif & \texttt{amsmath} & \verb+\BF+ & \verb+\bm{\mathsf{*}}+ & $\BFA\BFB\BFC\BFd\BFe\BFf\BFone\BFtwo\BFthree$\\
-    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ & $\IA\IB\IC\Ione\Itwo\Ithree$ \\
+    AMS blackboard bold* & \texttt{amsfonts} & \verb+\I+ & \verb+\mathbb{*}+ &
+                                                                               $\IA\IB\IC$ \\ %\Ione\Itwo\Ithree
     % \texttt{bbold} blackboard bold & \texttt{bbold},\texttt{mathbbol} & % \verb+\II+ \verb++ & $\IIA\IIB\IIC\IId\IIe\IIf\IIone\IItwo\IIthree$ \\
     \texttt{bbm} blackboard bold serif & \texttt{bbm} & \verb+\bB+ & \verb+\mathbbm{*}+ & $\bBA\bBB\bBC\bBd\bBe\bBf$\\
     \texttt{bbm} blackboard bold sans & \texttt{bbm} & \verb+\BB+ & \verb+\mathbbmss{*}+ & $\BBA\BBB\BBC\BBd\BBe\BBf$ \\
