--- a/shortsym_header.sty
+++ b/shortsym_header.sty
@@ -7,7 +7,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{bbm}
-\usepackage{bbold}
+% \usepackage{bbold}
 \usepackage{bm}
 
 % \usepackage{unicode-math}
